Frontend/src/Components/ResultsHome/ResultsHome.css
.search-results-page {
    display: flex;
    flex-direction: column;
    min-height: 90vh;
    padding: 20px;
    flex-wrap: wrap;
    background-color: #f0f0f0;
}

.results-home-container {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 0 1rem 2rem;
    margin: auto;
    max-width: 70rem;
    min-width: 65rem;
    overflow: hidden;
    flex-wrap: wrap;
  }



.filter-bar {
    display: flex;
    justify-content: center;
    width: 70rem;
    margin-right: auto;
    margin-left: auto;
    gap: 20px;
    padding: 20px;
    max-height: 5rem;
    background-color: white;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    margin-bottom: 30px;
}

.filter-button {
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    background-color: #f0f0f0;
    cursor: pointer;
    font-size: 16px;
    transition: all 0.3s ease;
}

.filter-button:hover {
    background-color: #124883;
    color: white;
}

.filter-button.active {
    background-color: #124883;
    color: white;
}

.row-description {
    display: flex;
    justify-content: space-between;
}

.view-results {
    border: none;
    background-color: transparent;
    color: #124883;
    font-size: 16px;    
}

.view-results:hover {
    color: #1248cc;
}

.content-container {
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding: 0 20px;
}

.content-row {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 30px;
    border-radius: 30px;
}

/* Use grid for even spacing */
.deck-row, .quiz-row {
    display: grid;
    grid-template-columns: repeat(4, 1fr); /* Creates 4 equal columns */
    gap: 20px;
    max-height: 175px;
}


/* Ensures items are all equal size */
.result-deck-item-home {
    border-radius: 8px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
    transition: box-shadow 0.3s ease;
    background-color: #f9f9f9;
    padding: 10px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
    height: 173px;
    box-sizing: border-box;
}

.result-deck-item-home:hover {
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

.deck-name-home {
    height: 50px;
    font-size: 20px;
    overflow: hidden;
    display: block;
    width: 100%;
}


.flashcard-question {
    font-size: 1rem;
    font-weight: bolder;
}


.modal-content {
    position: relative;
    background: white;
    padding: 20px;
    border-radius: 10px;
}

.modal-header {
    display: flex;
    justify-content: flex-end;
    padding-right: 20px;
    background: white;
}

.modal-button {
    background-color: #f0f0f0;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    cursor: pointer;
    border-radius: 10px;
    width: 30px;
    height: 30px;
}


.modal-button:hover {
    background-color: #c1c1c1;
}


.buttons {
    display: flex;
    justify-content: space-between; 
    width: 100%;
}


.preview, .add_favorite {
    width: 4rem;
    height: 2rem;
    background-color: #f0f0f0;
    border: none;
    cursor: pointer;
    border-radius: 5px;
    text-align: center;
}


.preview:hover, .add_favorite:hover {
    background-color: #c1c1c1;
}

